chore: register PartTransactionRepo in PartsModule & fix CreateTransactionDto
